<resources>
    <string name="app_name">微共享相册</string>
    <string name="network_connect_error">请检查网络是否连接</string>
    <string name="request_api_failed">请求数据失败</string>
    <string name="wx_login">微信登录</string>
    <string name="phone_login">手机号登录</string>
    <string name="loading">加载中...</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_pwd">请输入登录密码</string>
    <string name="please_input_bind_pwd">请输入密码</string>
    <string name="please_input_identifying_code">请输入验证码</string>
    <string name="get_identifying_code">获取验证码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_num">1234567890</string>
    <string name="filter_code">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-?@.</string>
    <string name="tv_login">登录</string>
    <string name="please_input_phone_format">请输入正确格式的手机号码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="pwd_length">密码不能少于6位</string>
    <string name="tv_ok">确定</string>
    <string name="tv_photo_dynamic">相册动态</string>
    <string name="tv_friend_circle">朋友圈</string>
    <string name="tv_live">直播</string>
    <string name="tv_mine">我的</string>
    <string name="photo_url">相册地址:</string>
    <string name="tv_open_vip">开通会员</string>
    <string name="find_privilege">查看特权</string>
    <string name="tv_my_two_code">我的二维码</string>
    <string name="tv_my_small_program">我的小程序码</string>
    <string name="tv_my_fans">我的粉丝</string>
    <string name="tv_my_cash">提现与返佣</string>
    <string name="tv_my_follow">已关注</string>
    <string name="tv_cash_num">0.00可提现</string>
    <string name="tv_problem">问题与反馈</string>
    <string name="tv_about_app">关于微共享相册</string>
    <string name="tv_setting">设置</string>
    <string name="exit_program">双击退出程序</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="have_bind">已绑定手机号码</string>
    <string name="bind_phone_hint">绑定手机号后，可使用手机号和密码登录微共享相册</string>
    <string name="label_manager">标签管理</string>
    <string name="exit_login">退出登录</string>
    <string name="login_problem">登录遇到问题？</string>
    <string name="phone_or_pwd_error">手机号或密码错误</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_dynamic">动态</string>
    <string name="tv_search">搜索</string>
    <string name="tv_share_my_photo">共享我的相册</string>
    <string name="tv_delete">删除</string>
    <string name="tv_stick">置顶</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_all_save">批量保存</string>
    <string name="tv_one_key_share">一键分享</string>
    <string name="repeat">已转发</string>
    <string name="tv_delete_success">删除成功</string>
    <string name="tv_stick_success">置顶成功</string>
    <string name="this_time_idea">这一刻的想法</string>
    <string name="label_name">标签</string>
    <string name="by_label_category">通过标签给图文分类</string>
    <string name="who_can_see">谁可以看</string>
    <string name="see_permission">(仅自己可见)</string>
    <string name="everyone_can_see">公开 : 所有粉丝可见</string>
    <string name="source">来源</string>
    <string name="no_source">无</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="about_clause">《相关条款》</string>
    <string name="publish_image_and_text">发布图文</string>
    <string name="tv_pic">图片</string>
    <string name="tv_video">视频</string>
    <string name="select_label">选择标签</string>
    <string name="add_label">添加标签</string>
    <string name="label_is_have">该标签已存在</string>
    <string name="edit_label">编辑标签</string>
    <string name="cancel">取消</string>
    <string name="tv_save">保存</string>
    <string name="tv_edit_success">编辑成功</string>
    <string name="please_read_and_agree_clause">请点击同意相关条款后继续操作</string>
    <string name="one_can_see">私密：仅自己可见</string>
    <string name="edit_image_and_text">编辑图文</string>
    <string name="tv_pic_source">图片来源</string>
    <string name="on_new_num">0</string>
    <string name="add_new">新增</string>
    <string name="all_num">总数</string>
    <string name="tv_today">今天</string>
    <string name="tv_friend_circle_details">朋友圈详情</string>
    <string name="finish">完成</string>
    <string name="i_know">我知道啦</string>
    <string name="please_input_content">请输入朋友圈内容</string>
    <string name="onclick_update_pic_bg">点击更换封面</string>
    <string name="our_label">个性签名</string>
    <string name="please_input_title">请输入朋友圈标题</string>
    <string name="filter">筛选</string>
    <string name="tv_select_dynamic">选择动态</string>
    <string name="tv_no_more_data">没有更多数据</string>
    <string name="please_least_select_one">请至少选择一个动态</string>
    <string name="please_least_select_pic">请至少选择一张图片</string>
    <string name="tv_title_pic_is_null">标题图片不能为空</string>
    <string name="content_is_null">朋友圈内容不能为空</string>
    <string name="bg_is_null">背景不能为空</string>
    <string name="dynamic_is_null">动态不能为空</string>
    <string name="upload_moments_success">上传朋友圈成功</string>
    <string name="edit_moments_success">编辑朋友圈成功</string>
    <string name="photo_two_code">相册二维码</string>
    <string name="on_new">上新</string>
    <string name="on_all">共</string>
    <string name="no_see_photo">扫码后看不见上家的微共享相册？</string>
    <string name="new_person_read">微共享相册新手必读</string>
    <string name="how_follow_photo">如何关注上家的相册？</string>
    <string name="what_is_protected">什么是专属私密保护</string>
    <string name="tv_photo_details">相册详情</string>
    <string name="tv_dynamic_details">动态详情</string>
    <string name="no_see_her_photos">不看他（她）的相册</string>
    <string name="open_no_see_who_dynamic_hint">打开后，他（她）发布的相册内容将不会出现在动态。</string>
    <string name="no_allow_who_see">不让他（她）看我的相册</string>
    <string name="open_no_allow_see">打开后，他（她）无法看到你的相册</string>
    <string name="set_permission">设置权限</string>
    <string name="set_permission_success">设置成功</string>
    <string name="tv_no_see">看不见上家的相册</string>
    <string name="tv_new_user_must_read">新手必读</string>
    <string name="tv_private_protected">专属私密保护</string>
    <string name="how_have_fans">如何拥有更多粉丝？</string>
    <string name="tv_how_to_have_more_fans">如何拥有更多粉丝</string>
    <string name="tv_FAQ">常见问题</string>
    <string name="content_custom">联系客服</string>
    <string name="tv_feedback">建议反馈</string>
    <string name="tv_hot_FAQ">热门常见问题</string>
    <string name="update_money_fail">改价没成功?</string>
    <string name="share_fail">分享朋友圈失败?</string>
    <string name="how_to_share_pic">如何高清转图?</string>
    <string name="why_to_app">为什么使用微共享相册安全又私密？</string>
    <string name="how_to_sy_friend">微共享相册如何同步朋友圈的内容？</string>
    <string name="tv_share_friend_circle_fail">分享朋友圈失败</string>
    <string name="tv_private_safe">私密又安全</string>
    <string name="tv_synchro_friend_circle">同步朋友圈内容</string>
    <string name="tv_grade">去评分</string>
    <string name="system_notify">系统通知</string>
    <string name="about_mime">关于我们</string>
    <string name="reset_pwd">重置密码</string>
    <string name="photo_name">相册名称</string>
    <string name="please_input_photo_name">请输入相册名称</string>
    <string name="contact_phone">联系电话</string>
    <string name="wx_num">微信号</string>
    <string name="please_input_wx">请输入微信号</string>
    <string name="wx_two_code">微信二维码</string>
    <string name="tv_upload_wx_two_code">上传个人微信二维码</string>
    <string name="tv_photo_info">相册介绍</string>
    <string name="photo_hint">相册详细介绍、主营、资质、特色</string>
    <string name="title_photo_info">相册信息</string>
    <string name="share_wx">好友/群</string>
    <string name="have_no_wx">您还没有安装微信</string>
    <string name="tv_water">水印</string>
    <string name="please_least_select_one_pic">请至少选择一张图片</string>
    <string name="tv_water_mould">水印模板</string>
    <string name="tv_water_design_money">付费水印设计</string>
    <string name="tv_photo_upload">相册上传</string>
    <string name="tv_water_style">选择样式</string>
    <string name="tv_all">全部</string>
    <string name="tv_label_sticker">标签贴纸</string>
    <string name="tv_two_code">二维码</string>
    <string name="tv_kinds_shape">各种形状</string>
    <string name="tv_more_mould">更多个性模板</string>
    <string name="tv_lower_water">花边水印</string>
    <string name="tv_money_mould">价签模板</string>
    <string name="tv_good_request">精品推荐</string>
    <string name="order_num">订单数量</string>
    <string name="tv_my_balance">余额</string>
    <string name="tv_my_orders">我的订单</string>
    <string name="tv_my_live_good">直播产品</string>
    <string name="tv_my_profit">账户充值</string>
    <string name="consumption">消费清单</string>
    <string name="tv_open_live">开播</string>
    <string name="tv_to_be_confirm">待确认</string>
    <string name="tv_confirmed">已确认</string>
    <string name="tv_shipped">已发货</string>
    <string name="tv_canceled">已取消</string>
    <string name="no_about_order">暂无订单内容</string>
    <string name="tv_send_out_goods">发货</string>
    <string name="select_live_good">选择直播产品</string>
    <string name="no_consumption">暂无消费清单哦！</string>
    <string name="tv_live_start_time">开始时间</string>
    <string name="tv_live_end_time">结束时间</string>
    <string name="tv_watch_num">观看人数</string>
    <string name="tv_spend">总花费</string>
    <string name="begin_at">开始于\n</string>
    <string name="end_at">结束于\n</string>
    <string name="time_start_larger_end_not_allowed">开始时间不能大于结束时间</string>
    <string name="recharge_fail">充值失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_cancel">支付取消</string>
    <string name="click_change_pic">点击更换封面</string>
    <string name="tv_default_fans">初始人气</string>
    <string name="tv_default_fans_num">1</string>
    <string name="tv_default_add_fans">递增人气</string>
    <string name="please_input_live_title">请输入直播标题</string>
    <string name="phone_number">联系电话</string>
    <string name="wx_number">微信号</string>
    <string name="tv_notify_content">公告内容</string>
    <string name="please_input_notify_content">请输入公告内容</string>
    <string name="user_privacy_protocol">《主播开播协议》</string>
    <string name="release_live">发布直播</string>
    <string name="please_upload_cover">请上传直播封面</string>
    <string name="live_title_no_empty">标题不能为空</string>
    <string name="please_input_start_fans">请输入初始人气</string>
    <string name="please_input_add_fans">请输入递增人气</string>
    <string name="tv_default_app_name">微商云管家</string>
    <string name="tv_default_wx">wgxxc6666</string>
    <string name="tv_whole_color_edit">整体颜色修改</string>
    <string name="tv_is_full_screen_watermark">是否全屏水印</string>
    <string name="tv_water_bg_set">水印背景设置</string>
    <string name="tv_title">标题</string>
    <string name="update_color">修改颜色</string>
    <string name="full_screen_watermark">全屏水印</string>
    <string name="watermark_num">个数</string>
    <string name="watermark_space">间距</string>
    <string name="tv_size_space">字体，大小，间距</string>
    <string name="tv_color">文字颜色</string>
    <string name="tv_align">文字对齐</string>
    <string name="tv_stroke">描边</string>
    <string name="tv_bg_color">背景色</string>
    <string name="mould_preview">模板预览</string>
    <string name="create_water">生成水印</string>
    <string name="tv_water_mark_upload_fail">水印上传失败</string>
    <string name="watermark_bg">水印背景</string>
    <string name="watermark_alpha">透明</string>
    <string name="watermark_corner">圆角</string>
    <string name="tv_text_align">文字对齐</string>
    <string name="tv_text_left">左</string>
    <string name="tv_text_center">中</string>
    <string name="tv_text_right">右</string>
    <string name="degree">粗细</string>
    <string name="tv_icon">图标</string>
    <string name="watermark_text_size">字体大小</string>
    <string name="watermark_text_space">文字间距</string>
    <string name="tv_default_wx_5014">wx:wgxxc6666</string>
    <string name="tv_default_money">199</string>
    <string name="tv_happy">HAPPY</string>
    <string name="tv_new">NEW</string>
    <string name="tv_year">YEAR</string>
    <string name="tv_hello_2018">HELLO 2018</string>
    <string name="tv_default_years">2018</string>
    <string name="tv_gonghe">恭贺</string>
    <string name="tv_add_water">添加水印</string>
</resources>