<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">
    <include
        android:id="@+id/layout_head"
        layout="@layout/layout_head"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_input"
        android:layout_below="@+id/layout_head"
        android:layout_marginTop="20px"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="161px">
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/layout_phone"
            android:layout_marginLeft="20px"
            android:layout_width="match_parent"
            android:layout_height="80px">
            <ImageView
                android:id="@+id/iv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mobile"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_phone"
                android:layout_toRightOf="@+id/iv_mobile"
                android:layout_marginLeft="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textColor="@color/tv_text_color1"
                android:textSize="30px"
                android:hint="@string/please_input_phone"
                android:maxLines="1"
                android:maxLength="11"
                android:digits="@string/phone_num"
                />
        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            android:id="@+id/tv_line"
            android:layout_below="@+id/layout_phone"
            android:layout_marginLeft="20px"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_bg_color"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_below="@+id/tv_line"
            android:id="@+id/layout_pwd"
            android:layout_marginLeft="20px"
            android:layout_width="match_parent"
            android:layout_height="80px">
            <ImageView
                android:id="@+id/iv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/locked"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_pwd"
                android:layout_toRightOf="@+id/iv_pwd"
                android:layout_marginLeft="20px"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textCursorDrawable="@null"
                android:textColor="@color/tv_text_color1"
                android:textSize="30px"
                android:hint="@string/please_input_pwd"
                android:digits="@string/filter_code"
                android:maxLines="1"
                android:maxLength="18"
                android:inputType="textPassword"
                />
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_forget_pwd"
        android:layout_below="@+id/layout_input"
        android:layout_alignParentRight="true"
        android:layout_width="200px"
        android:layout_height="60px">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:textSize="24px"
            android:textColor="@color/tv_text_color2"
            android:text="@string/forget_pwd"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/layout_input"
        android:layout_width="600px"
        android:layout_height="80px"
        android:background="@color/btn_login_bg_color"
        android:layout_marginTop="200px"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:text="@string/tv_login"
        android:textSize="28px"
        />
</com.zhy.autolayout.AutoRelativeLayout>
