<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    >
    <include
        layout="@layout/layout_head"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_bind_phone"
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <TextView
            android:id="@+id/tv_bind_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:textColor="@color/black"
            android:textSize="28px"
            android:text="@string/bind_phone"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/right_go"/>
    </com.zhy.autolayout.AutoRelativeLayout>
    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80px"
        >
        <TextView
            android:layout_marginTop="6px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:textColor="@color/tv_text_color1"
            android:textSize="24px"
            android:text="@string/bind_phone_hint"
            />
    </com.zhy.autolayout.AutoRelativeLayout>


    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_label_manager"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:textColor="@color/black"
            android:textSize="28px"
            android:text="@string/label_manager"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/right_go"/>
    </com.zhy.autolayout.AutoRelativeLayout>
    <TextView
        android:layout_marginLeft="20px"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_bg_color"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_exit_login"
        android:layout_marginTop="80px"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/tv_text_color1"
            android:textSize="28px"
            android:text="@string/exit_login"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_login_problem"
        android:layout_width="match_parent"
        android:layout_height="60px"
        android:layout_marginLeft="10px"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/tv_text_color2"
            android:textSize="24px"
            android:text="@string/login_problem"/>
    </com.zhy.autolayout.AutoRelativeLayout>
</com.zhy.autolayout.AutoLinearLayout>
