<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    >
    <include
        android:id="@+id/layout_head"
        layout="@layout/layout_head"/>
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_top"
        android:layout_below="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <com.zhy.autolayout.AutoRelativeLayout
            android:id="@+id/layout_article"
            android:layout_marginTop="30px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_width="match_parent"
            android:layout_height="172px">
            <EditText
                android:id="@+id/et_description_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/this_time_idea"
                android:textColorHint="@color/tv_text_color1"
                android:textSize="30px"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:lineSpacingExtra="5px"
                android:focusable="false"
                />
        </com.zhy.autolayout.AutoRelativeLayout>

        <!--展示上传的图片-->
        <GridView
            android:layout_marginTop="20px"
            android:layout_below="@+id/layout_article"
            android:id="@+id/id_grid_view_commit_answers"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:columnWidth="74dp"
            android:horizontalSpacing="6dp"
            android:numColumns="4"
            android:verticalSpacing="6dp"/>
        <TextView
            android:layout_marginTop="20px"
            android:layout_below="@+id/id_grid_view_commit_answers"
            android:layout_marginLeft="20px"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_bg_color"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_label"
        android:layout_below="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@drawable/icon_label"/>
        <TextView
            android:id="@+id/tv_label_hint"
            android:layout_toRightOf="@+id/iv_label"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="30px"
            android:textColor="@color/black"
            android:text="@string/label_name"/>
        <ImageView
            android:id="@+id/iv_label_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/right_go"
            android:layout_centerVertical="true"/>
        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_toRightOf="@+id/tv_label_hint"
            android:layout_marginLeft="60px"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/iv_label_right"
            android:layout_marginRight="20px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/tv_text_color1"
                android:textSize="24px"
                android:text="@string/by_label_category"
                android:layout_alignParentRight="true"
                android:maxLines="1"
                android:ellipsize="end"/>
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoRelativeLayout>


    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_who_can_see"
        android:layout_below="@+id/layout_label"
        android:layout_marginTop="40px"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@drawable/icon_permission"/>
        <TextView
            android:layout_toRightOf="@+id/iv_permission"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="30px"
            android:textColor="@color/black"
            android:text="@string/who_can_see"/>
        <ImageView
            android:id="@+id/iv_permission_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/right_go"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/tv_who_can_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_permission_right"
            android:layout_marginRight="20px"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_text_color1"
            android:textSize="24px"
            android:text="@string/everyone_can_see"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <TextView
        android:id="@+id/tv_line"
        android:layout_below="@+id/layout_who_can_see"
        android:layout_marginLeft="20px"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_bg_color"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/layout_source"
        android:layout_below="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@color/white">
        <ImageView
            android:id="@+id/iv_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:src="@drawable/icon_source"/>
        <TextView
            android:id="@+id/tv_source"
            android:layout_toRightOf="@+id/iv_source"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="30px"
            android:textColor="@color/black"
            android:text="@string/source"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_source"
            android:layout_marginLeft="8px"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_text_color1"
            android:textSize="24px"
            android:text="@string/see_permission"/>

        <ImageView
            android:id="@+id/iv_source_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20px"
            android:src="@drawable/right_go"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_source_right"
            android:layout_marginRight="20px"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_text_color1"
            android:textSize="24px"
            android:text="@string/no_source"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_below="@+id/layout_source"
        android:layout_width="match_parent"
        android:layout_height="80px"
        >
        <CheckBox
            android:id="@+id/check_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:button="@drawable/check_clause"
            android:checked="true"
            />
        <TextView
            android:id="@+id/tv_read_and_agree"
            android:layout_toRightOf="@+id/check_clause"
            android:layout_marginLeft="20px"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="28px"
            android:textColor="@color/tv_text_color1"
            android:text="@string/read_and_agree"/>

        <TextView
            android:id="@+id/tv_about_clause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_read_and_agree"
            android:layout_marginLeft="8px"
            android:layout_centerVertical="true"
            android:textColor="@color/tv_text_color2"
            android:textSize="28px"
            android:text="@string/about_clause"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/btn_one_key_share"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:background="@drawable/one_key"
        android:textColor="@color/white"
        android:textSize="28px"
        android:text="@string/tv_one_key_share"/>
</com.zhy.autolayout.AutoRelativeLayout>
